--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                         Currently, I'm pursuing my BE Course, having completed my 2nd PUC at JS PU COLLEGE and Currently enrolled in ACS COLLEGE OF ENGINEERING. My academic path has been shaped by a strong foundation in computer science and a desire to explore various facets of technology.
                     </p>
                     <p>
-                        I'm actively learning <strong>Python</strong> and also have experience with <strong>PHP</strong>. This is complemented by my foundational knowledge of web technologies like <strong>GoLang</strong> <strong>React.Js</strong><strong>TSX</strong><strong>JSX</strong><strong>HTML</strong> and <strong>CSS</strong>. I'm passionate about how these tools can be used to create impactful and user-friendly digital experiences.
+                        I'm actively learning <strong>Python</strong> and also have experience with <strong>PHP</strong>. This is complemented by my foundational knowledge of web technologies like <strong>GoLang,</strong> <strong>React.Js,</strong> <strong>TSX,</strong> <strong>JSX,</strong> <strong>HTML</strong> and <strong>CSS</strong>. I'm passionate about how these tools can be used to create impactful and user-friendly digital experiences.
                     </p>
                     <p>
                         I believe in continuous learning and am always looking for opportunities to expand my skillset and contribute to exciting projects.
